tests/neg-custom-args/captures/byname.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/byname.scala:10:6 ----------------------------------------
10 |  h(f2()) // error
   |    ^^^^
   |    Found:    (x$0: Int) ->{cap1} Int
   |    Required: Int ->{cap2} Int
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/byname.scala:19:5 ----------------------------------------
19 |  h(g()) // error
   |    ^^^
   |    Found:    () ?->{cap2} I
   |    Required: () ?->{cap1} I
   |
   | longer explanation available when compiling with `-explain`
